# v8-heap-inspector

./: .gitignore  Cargo.toml  README.md  bin.ts  binding.d.ts  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
.github/workflows/: CI.yml
cli/: bin.ts
cli/local/: index.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  local_analyzer.rs
src/core/: consts.rs  deserialize.rs  mod.rs  snapshot.rs  snapshot_v8.rs
src/core/snapshot/: common.rs  edge.rs  mod.rs  node.rs  utils.rs
src/core_analyzer/: get_all_constructors.rs  get_node.rs  get_node_references.rs  mod.rs
src/local_analyzer/: mod.rs
web/: api.ts  di.ts  font.css  index.html  index.tsx  startup.tsx  style.less  workbench.less  workbench.tsx  workbenchModel.ts
web/constructors/: ConstructorsItems.tsx  index.ts  style.less  view.tsx
web/contribution/: WorkbenchTabContribution.ts  index.ts
web/search/: graph.tsx  list.tsx  retained.tsx  searchTab.tsx
web/service/: APIService.ts  ConstructorService.ts  WorkbenchService.ts  index.ts
web/statistics/: index.ts  view.tsx
web/utils/: common.ts  di.ts  heap.tsx  index.ts  tableView.less  tableView.tsx  ui.tsx
web/workbench/: font.css  workbench.less  workbench.tsx
web/workbench/tabs/: index.ts
(+23 files in other folders)
