[package]
edition = "2021"
name = "v8-heap-inspector"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.13.2", default-features = false, features = ["napi6"] }
napi-derive = "2.13.0"
serde_json = "1.0.100"
serde = { version = "1.0.167", features = ["derive"] }
petgraph = "0.6.3"

[build-dependencies]
napi-build = "2.0.1"

# [profile.release]
# lto = true
