[package]
edition = "2021"
name = "v8-heap-inspector"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2", default-features = false, features = ["napi6"] }
napi-derive = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
petgraph = "0.6.x"

[build-dependencies]
napi-build = "2"

# [profile.release]
# lto = true
